# cli-rust

./: Cargo.toml  README.md
grrs/: Cargo.toml
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
src/: lib.rs
tests/: cli.rs
