[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["konradkon@duck.com"]
license = "GPL-3.0-or-later"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/Psyhackological/grrs"
repository = "https://github.com/Psyhackological/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
assert_fs = "1.0.13"
